--- a/emBODY/eBtest/arch-arm/libs/lowlevel/hl-core-tests/test-it/core-stm32f1.uvprojx
+++ b/emBODY/eBtest/arch-arm/libs/lowlevel/hl-core-tests/test-it/core-stm32f1.uvprojx
@@ -1032,7 +1032,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F10X_CL HL_USE_BRD_MCBSTM32_C</Define>
+              <Define>STM32F10X_CL HL_USE_BRD_MCBSTM32C</Define>
               <Undefine></Undefine>
               <IncludePath>..\cmsis-cfg;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\hl-core\cmsis\api;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\hl-core\stm32f1\api</IncludePath>
             </VariousControls>
