--- a/emBODY/eBtest/arch-arm/libs/midware/eventviewer-tests/test-it/eventviewer-full.uvprojx
+++ b/emBODY/eBtest/arch-arm/libs/midware/eventviewer-tests/test-it/eventviewer-full.uvprojx
@@ -362,7 +362,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F10X_CL HL_USE_BRD_MCBSTM32_C</Define>
+              <Define>STM32F10X_CL HL_USE_BRD_MCBSTM32C</Define>
               <Undefine></Undefine>
               <IncludePath>..\cmsis-cfg;..\..\..\lowlevel\hl-core-tests\app-test\cmsis;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\hl-core\cmsis\api;..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api</IncludePath>
             </VariousControls>
@@ -762,7 +762,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\eventviewer-stm32-cfg.ini</InitializationFile>
+            <InitializationFile>.\eventviewer-stm32f4x-cfg.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
@@ -965,7 +965,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F40_41xxx HL_USE_BRD_MCBSTM32_F400 __CORTEX_M4  __FPU_PRESENT</Define>
+              <Define>STM32F40_41xxx HL_USE_BRD_MCBSTM32F400 __CORTEX_M4  __FPU_PRESENT</Define>
               <Undefine></Undefine>
               <IncludePath>..\cmsis-cfg;..\..\..\lowlevel\hl-core-tests\app-test\cmsis;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\hl-core\cmsis\api;..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api</IncludePath>
             </VariousControls>
