--- a/emBODY/eBtest/arch-arm/libs/midware/hl-plus-tests/test-it/debugsetup-f1x.ini
+++ b/emBODY/eBtest/arch-arm/libs/midware/hl-plus-tests/test-it/debugsetup-f1x.ini
@@ -30,7 +30,7 @@ FUNC void DebugSetup (void) {
 //   <o1.13>   DBG_TIM4_STOP <i> Timer 4 Stopped when Core is halted
 //   <o1.14>   DBG_CAN_STOP  <i> CAN Stopped when Core is halted
 // </h>
-  _WDWORD(0xE0042004, 0x00007F27);  // DBGMCU_CR
+  _WDWORD(0xE0042004, 0x00000027);  // DBGMCU_CR
 }
 
 DebugSetup();                       // Debugger Setup
