--- a/emBODY/eBtest/arch-arm/board/many/appl/EOMapplicationBasic/proj/eom-application-basic-ems4rd.uvprojx
+++ b/emBODY/eBtest/arch-arm/board/many/appl/EOMapplicationBasic/proj/eom-application-basic-ems4rd.uvprojx
@@ -7,7 +7,7 @@
 
   <Targets>
     <Target>
-      <TargetName>mcbstm32c</TargetName>
+      <TargetName>mcbstm32f400</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <TargetOption>
@@ -423,19 +423,14 @@
           <GroupName>abslayer-lib</GroupName>
           <Files>
             <File>
-              <FileName>hal_startup_stm32f107.s</FileName>
+              <FileName>hal_startup_mpu_name_stm32f407ig.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\stg\hal_startup_stm32f107.s</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_startup_mpu_name_stm32f407ig.s</FilePath>
             </File>
             <File>
-              <FileName>hal.mcbstm32c.lib</FileName>
+              <FileName>hal2.ems4rd.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\lib\hal.mcbstm32c.lib</FilePath>
-            </File>
-            <File>
-              <FileName>hal.ems001.lib</FileName>
-              <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\lib\hal.ems001.lib</FilePath>
+              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.lib</FilePath>
               <FileOption>
                 <CommonProperty>
                   <UseCPPCompiler>2</UseCPPCompiler>
@@ -457,9 +452,9 @@
               </FileOption>
             </File>
             <File>
-              <FileName>osal.cm3.dbg.lib</FileName>
+              <FileName>osal.cm4.dbg.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\lib\osal.cm3.dbg.lib</FilePath>
+              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\lib\osal.cm4.dbg.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -467,24 +462,24 @@
           <GroupName>abslayer-cfg</GroupName>
           <Files>
             <File>
-              <FileName>hal_cfg.c</FileName>
+              <FileName>hal_core_cfg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\abslayer-cfg\hal_cfg.c</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_core_cfg.c</FilePath>
             </File>
             <File>
               <FileName>osal_cfg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\abslayer-cfg\osal_cfg.c</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\osal_cfg.c</FilePath>
             </File>
             <File>
-              <FileName>hal_cfg.h</FileName>
+              <FileName>hal_core_cfg.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\abslayer-cfg\hal_cfg.h</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_core_cfg.h</FilePath>
             </File>
             <File>
               <FileName>osal_cfg.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\abslayer-cfg\osal_cfg.h</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\osal_cfg.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -739,36 +734,36 @@
       </Groups>
     </Target>
     <Target>
-      <TargetName>ems001</TargetName>
+      <TargetName>ems4rd</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32F107VC</Device>
+          <Device>STM32F407IG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <Cpu>IRAM(0x20000000-0x2000FFFF) IROM(0x8000000-0x803FFFF) CLOCK(25000000) CPUTYPE("Cortex-M3")</Cpu>
+          <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
-          <StartupFile>"STARTUP\ST\STM32F10x.s" ("STM32 Startup Code")</StartupFile>
-          <FlashDriverDll>UL2CM3(-O14 -S0 -C0 -N00("ARM Cortex-M3") -D00(1BA00477) -L00(4) -FO7 -FD20000000 -FC800 -FN1 -FF0STM32F10x_CL -FS08000000 -FL040000)</FlashDriverDll>
-          <DeviceId>4889</DeviceId>
-          <RegisterFile>stm32f10x_lib.h</RegisterFile>
+          <StartupFile></StartupFile>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32F4xx_1024 -FS08000000 -FL0100000 -FP0($$Device:STM32F407IG$Flash\STM32F4xx_1024.FLM))</FlashDriverDll>
+          <DeviceId>6104</DeviceId>
+          <RegisterFile>$$Device:STM32F407IG$Device\Include\stm32f4xx.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
           <Linker></Linker>
           <OHString></OHString>
           <InfinionOptionDll></InfinionOptionDll>
-          <SLE66CMisc></SLE66CMisc>
+          <SLE66CMisc>-DSTM32F40_41xxx</SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32F107VC$SVD\STM32F107xx.svd</SFDFile>
+          <SFDFile>$$Device:STM32F407IG$SVD\STM32F40x.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
           <IncludePath></IncludePath>
           <LibPath></LibPath>
-          <RegisterFilePath>ST\STM32F10x\</RegisterFilePath>
-          <DBRegisterFilePath>ST\STM32F10x\</DBRegisterFilePath>
+          <RegisterFilePath></RegisterFilePath>
+          <DBRegisterFilePath></DBRegisterFilePath>
           <TargetStatus>
             <Error>0</Error>
             <ExitCodeStop>0</ExitCodeStop>
@@ -810,7 +805,7 @@
           <AfterMake>
             <RunUserProg1>0</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>cmd.exe /C copy .\Obj\eApplBasic_ems001_open.hex ..\bin\eApplBasic_ems001_open.hex</UserProg1Name>
+            <UserProg1Name></UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -836,13 +831,13 @@
         </CommonProperty>
         <DllOption>
           <SimDllName>SARMCM3.DLL</SimDllName>
-          <SimDllArguments></SimDllArguments>
-          <SimDlgDll>DARMSTM.DLL</SimDlgDll>
-          <SimDlgDllArguments>-pSTM32F107VC</SimDlgDllArguments>
+          <SimDllArguments>-MPU -REMAP</SimDllArguments>
+          <SimDlgDll>DCM.DLL</SimDlgDll>
+          <SimDlgDllArguments>-pCM4</SimDlgDllArguments>
           <TargetDllName>SARMCM3.DLL</TargetDllName>
-          <TargetDllArguments></TargetDllArguments>
-          <TargetDlgDll>TARMSTM.DLL</TargetDlgDll>
-          <TargetDlgDllArguments>-pSTM32F107VC</TargetDlgDllArguments>
+          <TargetDllArguments>-MPU</TargetDllArguments>
+          <TargetDlgDll>TCM.DLL</TargetDlgDll>
+          <TargetDlgDllArguments>-pCM4</TargetDlgDllArguments>
         </DllOption>
         <DebugOption>
           <OPTHX>
@@ -902,10 +897,10 @@
             <RunIndependent>0</RunIndependent>
             <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
-            <DriverSelection>4100</DriverSelection>
+            <DriverSelection>4096</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
-          <Flash2>BIN\ULP2CM3.DLL</Flash2>
+          <Flash2>BIN\UL2CM3.DLL</Flash2>
           <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
@@ -942,7 +937,7 @@
             <AdsLsxf>1</AdsLsxf>
             <RvctClst>0</RvctClst>
             <GenPPlst>0</GenPPlst>
-            <AdsCpuType>"Cortex-M3"</AdsCpuType>
+            <AdsCpuType>"Cortex-M4"</AdsCpuType>
             <RvctDeviceName></RvctDeviceName>
             <mOS>0</mOS>
             <uocRom>0</uocRom>
@@ -951,15 +946,15 @@
             <hadIRAM>1</hadIRAM>
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
-            <RvdsVP>0</RvdsVP>
-            <hadIRAM2>0</hadIRAM2>
+            <RvdsVP>2</RvdsVP>
+            <hadIRAM2>1</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
             <useUlib>0</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <RoSelD>3</RoSelD>
-            <RwSelD>5</RwSelD>
+            <RwSelD>3</RwSelD>
             <CodeSel>0</CodeSel>
             <OptFeed>0</OptFeed>
             <NoZi1>0</NoZi1>
@@ -976,7 +971,7 @@
             <Ra2Chk>0</Ra2Chk>
             <Ra3Chk>0</Ra3Chk>
             <Im1Chk>1</Im1Chk>
-            <Im2Chk>0</Im2Chk>
+            <Im2Chk>1</Im2Chk>
             <OnChipMemories>
               <Ocm1>
                 <Type>0</Type>
@@ -1011,12 +1006,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x20000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x40000</Size>
+                <Size>0x100000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -1041,7 +1036,7 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x40000</Size>
+                <Size>0x100000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -1066,12 +1061,12 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x20000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
-                <StartAddress>0x0</StartAddress>
-                <Size>0x0</Size>
+                <StartAddress>0x10000000</StartAddress>
+                <Size>0x10000</Size>
               </OCR_RVCT10>
             </OnChipMemories>
             <RvctStartVector></RvctStartVector>
@@ -1094,9 +1089,9 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>HAL_USE_ARCH_ARM</Define>
+              <Define>HAL_IS_VERSION_2</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\cfg;..\app_extra;..\app_basic;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\api;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\api;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\ipal\api;..\..\..\..\..\..\..\eBcode\embobj\core\core;..\..\..\..\..\..\..\eBcode\embobj\core\exec\multitask;..\..\..\..\..\..\..\eBcode\embobj\plus\ipnet;..\..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api</IncludePath>
+              <IncludePath>..\..\cfg;..\app_extra;..\app_basic;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal2\api;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\api;..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\ipal\api;..\..\..\..\..\..\..\eBcode\embobj\core\core;..\..\..\..\..\..\..\eBcode\embobj\core\exec\multitask;..\..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1155,43 +1150,19 @@
           <GroupName>abslayer-lib</GroupName>
           <Files>
             <File>
-              <FileName>hal_startup_stm32f107.s</FileName>
+              <FileName>hal_startup_mpu_name_stm32f407ig.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\stg\hal_startup_stm32f107.s</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_startup_mpu_name_stm32f407ig.s</FilePath>
             </File>
             <File>
-              <FileName>hal.mcbstm32c.lib</FileName>
+              <FileName>hal2.ems4rd.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\lib\hal.mcbstm32c.lib</FilePath>
-              <FileOption>
-                <CommonProperty>
-                  <UseCPPCompiler>2</UseCPPCompiler>
-                  <RVCTCodeConst>0</RVCTCodeConst>
-                  <RVCTZI>0</RVCTZI>
-                  <RVCTOtherData>0</RVCTOtherData>
-                  <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>0</IncludeInBuild>
-                  <AlwaysBuild>2</AlwaysBuild>
-                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
-                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
-                  <PublicsOnly>2</PublicsOnly>
-                  <StopOnExitCode>11</StopOnExitCode>
-                  <CustomArgument></CustomArgument>
-                  <IncludeLibraryModules></IncludeLibraryModules>
-                  <ComprImg>1</ComprImg>
-                </CommonProperty>
-                <FileArmAds/>
-              </FileOption>
+              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.lib</FilePath>
             </File>
             <File>
-              <FileName>hal.ems001.lib</FileName>
+              <FileName>osal.cm4.dbg.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\hal\lib\hal.ems001.lib</FilePath>
-            </File>
-            <File>
-              <FileName>osal.cm3.dbg.lib</FileName>
-              <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\lib\osal.cm3.dbg.lib</FilePath>
+              <FilePath>..\..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\lib\osal.cm4.dbg.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -1199,24 +1170,24 @@
           <GroupName>abslayer-cfg</GroupName>
           <Files>
             <File>
-              <FileName>hal_cfg.c</FileName>
+              <FileName>hal_core_cfg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\abslayer-cfg\hal_cfg.c</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_core_cfg.c</FilePath>
             </File>
             <File>
               <FileName>osal_cfg.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\abslayer-cfg\osal_cfg.c</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\osal_cfg.c</FilePath>
             </File>
             <File>
-              <FileName>hal_cfg.h</FileName>
+              <FileName>hal_core_cfg.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\abslayer-cfg\hal_cfg.h</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\hal_core_cfg.h</FilePath>
             </File>
             <File>
               <FileName>osal_cfg.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\abslayer-cfg\osal_cfg.h</FilePath>
+              <FilePath>..\abslayer-cfg-stm32f4\osal_cfg.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1407,6 +1378,66 @@
         </Group>
         <Group>
           <GroupName>::CMSIS</GroupName>
+          <GroupOption>
+            <CommonProperty>
+              <UseCPPCompiler>0</UseCPPCompiler>
+              <RVCTCodeConst>0</RVCTCodeConst>
+              <RVCTZI>0</RVCTZI>
+              <RVCTOtherData>0</RVCTOtherData>
+              <ModuleSelection>0</ModuleSelection>
+              <IncludeInBuild>0</IncludeInBuild>
+              <AlwaysBuild>2</AlwaysBuild>
+              <GenerateAssemblyFile>2</GenerateAssemblyFile>
+              <AssembleAssemblyFile>2</AssembleAssemblyFile>
+              <PublicsOnly>2</PublicsOnly>
+              <StopOnExitCode>11</StopOnExitCode>
+              <CustomArgument></CustomArgument>
+              <IncludeLibraryModules></IncludeLibraryModules>
+              <ComprImg>1</ComprImg>
+            </CommonProperty>
+            <GroupArmAds>
+              <Cads>
+                <interw>2</interw>
+                <Optim>0</Optim>
+                <oTime>2</oTime>
+                <SplitLS>2</SplitLS>
+                <OneElfS>2</OneElfS>
+                <Strict>2</Strict>
+                <EnumInt>2</EnumInt>
+                <PlainCh>2</PlainCh>
+                <Ropi>2</Ropi>
+                <Rwpi>2</Rwpi>
+                <wLevel>2</wLevel>
+                <uThumb>2</uThumb>
+                <uSurpInc>2</uSurpInc>
+                <uC99>2</uC99>
+                <useXO>2</useXO>
+                <VariousControls>
+                  <MiscControls></MiscControls>
+                  <Define></Define>
+                  <Undefine></Undefine>
+                  <IncludePath></IncludePath>
+                </VariousControls>
+              </Cads>
+              <Aads>
+                <interw>2</interw>
+                <Ropi>2</Ropi>
+                <Rwpi>2</Rwpi>
+                <thumb>2</thumb>
+                <SplitLS>2</SplitLS>
+                <SwStkChk>2</SwStkChk>
+                <NoWarn>2</NoWarn>
+                <uSurpInc>2</uSurpInc>
+                <useXO>2</useXO>
+                <VariousControls>
+                  <MiscControls></MiscControls>
+                  <Define></Define>
+                  <Undefine></Undefine>
+                  <IncludePath></IncludePath>
+                </VariousControls>
+              </Aads>
+            </GroupArmAds>
+          </GroupOption>
         </Group>
       </Groups>
     </Target>
@@ -1418,12 +1449,31 @@
       <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="3.30.0" condition="CMSIS Core">
         <package name="CMSIS" schemaVersion="1.2" url="http://www.keil.com/pack/" vendor="ARM" version="4.1.0"/>
         <targetInfos>
-          <targetInfo name="ems001"/>
-          <targetInfo excluded="1" name="mcbstm32c"/>
+          <targetInfo excluded="1" name="ems4rd"/>
+          <targetInfo excluded="1" name="mcbstm32f400"/>
         </targetInfos>
       </component>
     </components>
-    <files/>
+    <files>
+      <file attr="config" category="header" name="RTE_Driver\Config\RTE_Device.h" version="1.3.1">
+        <instance index="0" removed="1">RTE\Device\STM32F407IG\RTE_Device.h</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.3.1" condition="STM32F4xx CMSIS Device"/>
+        <package name="STM32F4xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack" vendor="Keil" version="1.0.8"/>
+        <targetInfos/>
+      </file>
+      <file attr="config" category="source" condition="STM32F40_41x_ARMCC" name="Device\Source\ARM\startup_stm32f40_41xxx.s" version="1.0.0">
+        <instance index="0" removed="1">RTE\Device\STM32F407IG\startup_stm32f40_41xxx.s</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.3.1" condition="STM32F4xx CMSIS Device"/>
+        <package name="STM32F4xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack" vendor="Keil" version="1.0.8"/>
+        <targetInfos/>
+      </file>
+      <file attr="config" category="source" name="Device\Source\system_stm32f4xx.c" version="1.3.0">
+        <instance index="0" removed="1">RTE\Device\STM32F407IG\system_stm32f4xx.c</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.3.1" condition="STM32F4xx CMSIS Device"/>
+        <package name="STM32F4xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack" vendor="Keil" version="1.0.8"/>
+        <targetInfos/>
+      </file>
+    </files>
   </RTE>
 
 </Project>
