--- a/emBODY/eBcode/arch-arm/libs/highlevel/abslayer/hal2/hal.stm32f4.uvprojx
+++ b/emBODY/eBcode/arch-arm/libs/highlevel/abslayer/hal2/hal.stm32f4.uvprojx
@@ -45,7 +45,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Obj\</OutputDirectory>
-          <OutputName>hal_mcbstm32f400</OutputName>
+          <OutputName>hal2_mcbstm32f400</OutputName>
           <CreateExecutable>0</CreateExecutable>
           <CreateLib>1</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -78,7 +78,7 @@
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>cmd.exe /C copy .\Obj\hal_mcbstm32f400.lib .\lib\hal.mcbstm32f400.lib</UserProg1Name>
+            <UserProg1Name>cmd.exe /C copy .\Obj\hal2_mcbstm32f400.lib .\lib\hal2.mcbstm32f400.lib</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -346,8 +346,8 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
-            <oTime>1</oTime>
+            <Optim>1</Optim>
+            <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
