eUpdater moves to v 2.12 which has a number of differences with its previous one: 1. uses hal2.ems4rd.ethdbg.lib which has 100mbps fd, no xcorr, port2 inverted txrx 2. at startup waits up to 3 seconds to connect to 10.0.1.104. if successful it turns on the red led(led0) THE RED LED IS THE CONNECTION LED AND SHOULD NOT BE USED FOR OTHER PURPOSES. 3. has different ipal, osal, hal configurations. 4. uses a new improved EOMtheIPnet which sends ARP packets every 100 ms until reply from host. before the arp packet was re-sent every second.
VERY IMPORTANT: USE IT ONLY WITH STRAIGHT ETH CABLES. IF EMS4 ARE IN CHAIN: connect port P2 only to port P3.

svn path=/trunk/iCub/firmware/; revision=29686

--- a/emBODY/eBcode/arch-arm/board/ems004/env/eUpdater/proj/eom-eupdater-open.uvprojx
+++ b/emBODY/eBcode/arch-arm/board/ems004/env/eUpdater/proj/eom-eupdater-open.uvprojx
@@ -458,9 +458,9 @@
               <FilePath>..\..\..\..\..\libs\highlevel\abslayer\osal\lib\osal.cm4.dbg.lib</FilePath>
             </File>
             <File>
-              <FileName>hal2.ems4rd.lib</FileName>
+              <FileName>hal2.ems4rd.ethdbg.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.lib</FilePath>
+              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.ethdbg.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -848,7 +848,7 @@
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
           <DebugInformation>0</DebugInformation>
-          <BrowseInformation>1</BrowseInformation>
+          <BrowseInformation>0</BrowseInformation>
           <ListingPath>.\Lst\</ListingPath>
           <HexFormatSelection>1</HexFormatSelection>
           <Merge32K>0</Merge32K>
@@ -957,7 +957,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\STM32_TP.ini</InitializationFile>
+            <InitializationFile>.\eventviewer-stm32-cfg.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
@@ -1275,9 +1275,9 @@
               </FileOption>
             </File>
             <File>
-              <FileName>hal2.ems4rd.lib</FileName>
+              <FileName>hal2.ems4rd.ethdbg.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.lib</FilePath>
+              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.ethdbg.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -2092,9 +2092,9 @@
               <FilePath>..\..\..\..\..\libs\highlevel\abslayer\osal\lib\osal.cm4.dbg.lib</FilePath>
             </File>
             <File>
-              <FileName>hal2.ems4rd.lib</FileName>
+              <FileName>hal2.ems4rd.ethdbg.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.lib</FilePath>
+              <FilePath>..\..\..\..\..\libs\highlevel\abslayer\hal2\lib\hal2.ems4rd.ethdbg.lib</FilePath>
             </File>
           </Files>
         </Group>
