--- a/emBODY/eBcode/arch-arm/board/ems004/env/eApplMaintainer/proj/eom-emaintainer-open.uvprojx
+++ b/emBODY/eBcode/arch-arm/board/ems004/env/eApplMaintainer/proj/eom-emaintainer-open.uvprojx
@@ -957,7 +957,7 @@
             <CpuDllArguments></CpuDllArguments>
             <PeripheralDll></PeripheralDll>
             <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile>.\STM32_TP.ini</InitializationFile>
+            <InitializationFile>.\eventviewer-stm32-cfg.ini</InitializationFile>
             <Driver>BIN\ULP2CM3.DLL</Driver>
           </TargetDlls>
         </DebugOption>
